<?xml version="1.0"?>
<package>
  <name>svo</name>
  <version>0.1.0</version>
  <description>
    Monocular Visual Odometry
  </description>
  <author>Christian Forster</author>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>vikit_common</build_depend>
  <build_depend>vikit_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>vikit_common</run_depend>
  <run_depend>vikit_ros</run_depend>
</package>