<?xml version="1.0"?>
<package>
  <name>svo_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for svo</description>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export></export>
</package>